--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,27 @@
-Django~=5.1.0
-django-debug-toolbar~=4.4.6
-djangorestframework~=3.15.2
-djangorestframework-simplejwt~=5.4.0
-drf-spectacular~=0.28.0
-Pillow~=11.1.0
-flake8~=7.1.1
-flake8-quotes~=3.4.0
-flake8-variables-names~=0.0.6
-pep8-naming~=0.14.1
-psycopg2-binary~=2.9.10
+asgiref==3.8.1
+attrs==25.1.0
+Django==5.1.6
+django-cors-headers==4.7.0
+django-debug-toolbar==4.4.6
+djangorestframework==3.15.2
+djangorestframework_simplejwt==5.4.0
+drf-spectacular==0.28.0
+flake8==7.1.2
+flake8-quotes==3.4.0
+flake8-variables-names==0.0.6
+inflection==0.5.1
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+mccabe==0.7.0
+pep8-naming==0.14.1
+pillow==11.1.0
+psycopg2-binary==2.9.10
+pycodestyle==2.12.1
+pyflakes==3.2.0
+PyJWT==2.10.1
+PyYAML==6.0.2
+referencing==0.36.2
+rpds-py==0.23.1
+setuptools==75.8.1
+sqlparse==0.5.3
+uritemplate==4.1.1
